🦄 refactor: Split compiler