@@ -25,6 +25,7 @@ import com.caoccao.javet.swc4j.options.Swc4jTransformOptions;
 import com.caoccao.javet.swc4j.outputs.Swc4jTransformOutput;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 public class Tutorial05Minify {
@@ -45,7 +46,7 @@ public class Tutorial05Minify {
                 
                 export { EmailValidator };""";
         // Prepare a script name.
-        URL specifier = new URL("file:///abc.ts");
+        URL specifier = URI.create("file:///abc.ts").toURL();
         // Prepare an option with script name and media type.
         // Minify is turned on by default.
         Swc4jTransformOptions options = new Swc4jTransformOptions()
